# guepardosys-caption-studio

./: .gitattributes  .gitignore  AGENTS.md  PLANO_MELHORIAS_SHORTS_VIRAIS_CROP_E_CORTES.md  PLANO_SHORTS_IA.md  README.md  backend.spec  gitignore  intervalos.json  main.py  package-lock.json  package.json  project_suggestions.md  pyproject.toml  setup.sh
.github/workflows/: publish.yml  release.yml
scripts/: build-backend.mjs  check-backend-deps.mjs  dev.mjs  download-ffmpeg.mjs  download-ffmpeg.ps1  shorts_benchmark.py  shorts_benchmark_v2.py  test_llm.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/src/: ffmpeg.rs  lib.rs  main.rs  preset.rs  subtitle.rs  whisper.rs
temp_test_shorts/: benchmark_summary.txt  llm_shorts_selection.json  transcript_formatted.txt  whisper_faster_result.json  whisper_standard_result.json
temp_test_shorts/v2/: gpu_benchmark_summary.txt  llm_shorts_selection_medium.json  llm_shorts_selection_small.json  transcript_grouped_large-v3.txt  transcript_grouped_medium.txt  transcript_grouped_small.txt  transcript_raw_large-v3.txt  transcript_raw_medium.txt  transcript_raw_small.txt  whisper_faster_large-v3_result.json  whisper_faster_medium_result.json  whisper_faster_small_result.json  whisper_standard_large-v3_result.json  whisper_standard_medium_result.json  whisper_standard_small_result.json
web/: __init__.py  presets.json  server.py
web/frontend/: index.html  vite.config.js
web/public/: index.html
web/services/: denoise_svc.py  ffmpeg_svc.py  preset_svc.py  subtitle_svc.py  whisper_svc.py
web/shorts/: __init__.py  config.py  models.py  (+6 more)
(+38 files in other folders)
