[project]
name = "video-silence-remover"
version = "0.1.0"
description = "Remove trechos sem fala de vídeos usando Whisper local e FFmpeg."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai-whisper",
  "torch",
]

[dependency-groups]
dev = [
  "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"
