[project]
name = "video-silence-remover"
version = "0.1.0"
description = "Remove trechos sem fala de vídeos usando Whisper local e FFmpeg."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai-whisper",
  "torch",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "python-multipart>=0.0.9",
  "websockets>=13.0",
  "faster-whisper>=1.2.1",
  "onnxruntime<1.20",
]

[dependency-groups]
dev = [
  "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py310"
