[package]
name = "studiocut"
version = "0.1.0"
description = "StudioCut - AI Video Editor"
authors = []
edition = "2021"

[[bin]]
name = "studiocut"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
whisper-rs = "0.16"
hound = "3.5"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
dirs = "6"
once_cell = "1"
reqwest = { version = "0.12", features = ["stream"] }
num_cpus = "1"
